clusters/production/apps/bitwarden/bitwarden-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: bitwarden-https
  namespace: bitwarden
spec:
  headers:
    forceSTSHeader: true
    stsSeconds: 31536000
    stsIncludeSubdomains: true
    stsPreload: true
    customRequestHeaders:
      X-Forwarded-Proto: "https"
    contentSecurityPolicy: "default-src 'self' 'unsafe-inline' 'unsafe-eval' data: blob:; frame-ancestors 'self' chrome-extension://nngceckbapebfimnlniiiahkandclblb chrome-extension://jbkfoedolllekgbhcbcoahefnbanhhlh moz-extension://*"
    browserXssFilter: true
    customFrameOptionsValue: "SAMEORIGIN"
    referrerPolicy: "same-origin"
