clusters/production/apps/bitwarden/bitwarden-statefulset-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bitwarden
  namespace: bitwarden
spec:
  template:
    spec:
      containers:
      - name: bitwarden
        volumeMounts:
        - name: cert
          mountPath: /certs
          readOnly: true
      volumes:
      - name: cert
        secret:
          secretName: vaultwarden-k3s-nu-tls
