clusters/production/apps/bitwarden/bitwarden-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitwarden
  namespace: bitwarden
spec:
  selector:
    app: bitwarden
  ports:
    - name: bitwarden-https
      port: 443
      protocol: TCP
      targetPort: 443
    - name: websocket
      protocol: TCP
      port: 3012
      targetPort: 3012
