clusters/production/apps/bitwarden/bitwarden-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bitwarden-https
  namespace: bitwarden
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`vaultwarden.k3s.nu`)
      middlewares:
        - name: bitwarden-https
          namespace: bitwarden
      services:
        - name: bitwarden
          port:
            name: http
  tls:
    secretName: vaultwarden-k3s-nu-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bitwarden-http
  namespace: bitwarden
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`vaultwarden.k3s.nu`)
      middlewares:
        - name: bitwarden-https
          namespace: bitwarden
      services:
        - name: bitwarden
          port:
            name: http
